out
test.cpp: In function ‘int main()’:
test.cpp:310:10: warning: variable ‘a’ set but not used [-Wunused-but-set-variable]
  310 |     uint a[K][MX][MX];
      |          ^
In file included from /usr/include/c++/12/bits/stl_iterator.h:85,
                 from /usr/include/c++/12/bits/stl_algobase.h:67,
                 from /usr/include/c++/12/bits/specfun.h:45,
                 from /usr/include/c++/12/cmath:1935,
                 from stdc++.h:41:
/usr/include/c++/12/bits/stl_construct.h: In instantiation of ‘constexpr void std::_Construct(_Tp*, _Args&& ...) [with _Tp = Mat<unsigned int>; _Args = {}]’:
/usr/include/c++/12/bits/stl_uninitialized.h:638:18:   required from ‘static constexpr _ForwardIterator std::__uninitialized_default_n_1<_TrivialValueType>::__uninit_default_n(_ForwardIterator, _Size) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int; bool _TrivialValueType = false]’
/usr/include/c++/12/bits/stl_uninitialized.h:701:20:   required from ‘constexpr _ForwardIterator std::__uninitialized_default_n(_ForwardIterator, _Size) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int]’
/usr/include/c++/12/bits/stl_uninitialized.h:766:44:   required from ‘constexpr _ForwardIterator std::__uninitialized_default_n_a(_ForwardIterator, _Size, allocator<_Tp>&) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int; _Tp = Mat<unsigned int>]’
/usr/include/c++/12/bits/stl_vector.h:1713:36:   required from ‘constexpr void std::__cxx1998::vector<_Tp, _Alloc>::_M_default_initialize(size_type) [with _Tp = Mat<unsigned int>; _Alloc = std::allocator<Mat<unsigned int> >; size_type = long unsigned int]’
/usr/include/c++/12/bits/stl_vector.h:553:9:   required from ‘constexpr std::__cxx1998::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Mat<unsigned int>; _Alloc = std::allocator<Mat<unsigned int> >; size_type = long unsigned int; allocator_type = std::allocator<Mat<unsigned int> >]’
/usr/include/c++/12/debug/vector:182:42:   required from ‘std::__debug::vector<_Tp, _Allocator>::vector(size_type, const _Allocator&) [with _Tp = Mat<unsigned int>; _Allocator = std::allocator<Mat<unsigned int> >; size_type = long unsigned int]’
test.cpp:319:20:   required from here
/usr/include/c++/12/bits/stl_construct.h:115:28: error: no matching function for call to ‘construct_at(Mat<unsigned int>*&)’
  115 |           std::construct_at(__p, std::forward<_Args>(__args)...);
      |           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/stl_construct.h:94:5: note: candidate: ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...)’
   94 |     construct_at(_Tp* __location, _Args&&... __args)
      |     ^~~~~~~~~~~~
/usr/include/c++/12/bits/stl_construct.h:94:5: note:   template argument deduction/substitution failed:
/usr/include/c++/12/bits/stl_construct.h: In substitution of ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...) [with _Tp = Mat<unsigned int>; _Args = {}]’:
/usr/include/c++/12/bits/stl_construct.h:115:21:   required from ‘constexpr void std::_Construct(_Tp*, _Args&& ...) [with _Tp = Mat<unsigned int>; _Args = {}]’
/usr/include/c++/12/bits/stl_uninitialized.h:638:18:   required from ‘static constexpr _ForwardIterator std::__uninitialized_default_n_1<_TrivialValueType>::__uninit_default_n(_ForwardIterator, _Size) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int; bool _TrivialValueType = false]’
/usr/include/c++/12/bits/stl_uninitialized.h:701:20:   required from ‘constexpr _ForwardIterator std::__uninitialized_default_n(_ForwardIterator, _Size) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int]’
/usr/include/c++/12/bits/stl_uninitialized.h:766:44:   required from ‘constexpr _ForwardIterator std::__uninitialized_default_n_a(_ForwardIterator, _Size, allocator<_Tp>&) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int; _Tp = Mat<unsigned int>]’
/usr/include/c++/12/bits/stl_vector.h:1713:36:   required from ‘constexpr void std::__cxx1998::vector<_Tp, _Alloc>::_M_default_initialize(size_type) [with _Tp = Mat<unsigned int>; _Alloc = std::allocator<Mat<unsigned int> >; size_type = long unsigned int]’
/usr/include/c++/12/bits/stl_vector.h:553:9:   required from ‘constexpr std::__cxx1998::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Mat<unsigned int>; _Alloc = std::allocator<Mat<unsigned int> >; size_type = long unsigned int; allocator_type = std::allocator<Mat<unsigned int> >]’
/usr/include/c++/12/debug/vector:182:42:   required from ‘std::__debug::vector<_Tp, _Allocator>::vector(size_type, const _Allocator&) [with _Tp = Mat<unsigned int>; _Allocator = std::allocator<Mat<unsigned int> >; size_type = long unsigned int]’
test.cpp:319:20:   required from here
/usr/include/c++/12/bits/stl_construct.h:96:17: error: no matching function for call to ‘Mat<unsigned int>::Mat()’
   96 |     -> decltype(::new((void*)0) _Tp(std::declval<_Args>()...))
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.cpp:217:5: note: candidate: ‘Mat<T>::Mat(int, T*) [with T = unsigned int]’
  217 |     Mat (int n, T *src=nullptr): n(n) {  // src must be a pointer (e.g. Mat(n,*src))
      |     ^~~
test.cpp:217:5: note:   candidate expects 2 arguments, 0 provided
test.cpp:213:7: note: candidate: ‘constexpr Mat<unsigned int>::Mat(const Mat<unsigned int>&)’
  213 | class Mat {
      |       ^~~
test.cpp:213:7: note:   candidate expects 1 argument, 0 provided
test.cpp:213:7: note: candidate: ‘constexpr Mat<unsigned int>::Mat(Mat<unsigned int>&&)’
test.cpp:213:7: note:   candidate expects 1 argument, 0 provided
/usr/include/c++/12/bits/stl_construct.h: In instantiation of ‘constexpr void std::_Construct(_Tp*, _Args&& ...) [with _Tp = Mat<unsigned int>; _Args = {}]’:
/usr/include/c++/12/bits/stl_uninitialized.h:638:18:   required from ‘static constexpr _ForwardIterator std::__uninitialized_default_n_1<_TrivialValueType>::__uninit_default_n(_ForwardIterator, _Size) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int; bool _TrivialValueType = false]’
/usr/include/c++/12/bits/stl_uninitialized.h:701:20:   required from ‘constexpr _ForwardIterator std::__uninitialized_default_n(_ForwardIterator, _Size) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int]’
/usr/include/c++/12/bits/stl_uninitialized.h:766:44:   required from ‘constexpr _ForwardIterator std::__uninitialized_default_n_a(_ForwardIterator, _Size, allocator<_Tp>&) [with _ForwardIterator = Mat<unsigned int>*; _Size = long unsigned int; _Tp = Mat<unsigned int>]’
/usr/include/c++/12/bits/stl_vector.h:1713:36:   required from ‘constexpr void std::__cxx1998::vector<_Tp, _Alloc>::_M_default_initialize(size_type) [with _Tp = Mat<unsigned int>; _Alloc = std::allocator<Mat<unsigned int> >; size_type = long unsigned int]’
/usr/include/c++/12/bits/stl_vector.h:553:9:   required from ‘constexpr std::__cxx1998::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Mat<unsigned int>; _Alloc = std::allocator<Mat<unsigned int> >; size_type = long unsigned int; allocator_type = std::allocator<Mat<unsigned int> >]’
/usr/include/c++/12/debug/vector:182:42:   required from ‘std::__debug::vector<_Tp, _Allocator>::vector(size_type, const _Allocator&) [with _Tp = Mat<unsigned int>; _Allocator = std::allocator<Mat<unsigned int> >; size_type = long unsigned int]’
test.cpp:319:20:   required from here
/usr/include/c++/12/bits/stl_construct.h:119:7: error: no matching function for call to ‘Mat<unsigned int>::Mat()’
  119 |       ::new((void*)__p) _Tp(std::forward<_Args>(__args)...);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.cpp:217:5: note: candidate: ‘Mat<T>::Mat(int, T*) [with T = unsigned int]’
  217 |     Mat (int n, T *src=nullptr): n(n) {  // src must be a pointer (e.g. Mat(n,*src))
      |     ^~~
test.cpp:217:5: note:   candidate expects 2 arguments, 0 provided
test.cpp:213:7: note: candidate: ‘constexpr Mat<unsigned int>::Mat(const Mat<unsigned int>&)’
  213 | class Mat {
      |       ^~~
test.cpp:213:7: note:   candidate expects 1 argument, 0 provided
test.cpp:213:7: note: candidate: ‘constexpr Mat<unsigned int>::Mat(Mat<unsigned int>&&)’
test.cpp:213:7: note:   candidate expects 1 argument, 0 provided
